--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -10,7 +10,7 @@
 # be disabled and audio files will only be accepted over ipc socket (using
 # file:// protocol) or streaming files over an accepted protocol.
 #
-music_directory		"~/music"
+music_directory		"~/Music"
 #
 # This setting sets the MPD internal playlist directory. The purpose of this
 # directory is storage for playlists created by MPD. The server will use 
@@ -64,14 +64,14 @@ sticker_file			"~/.config/mpd/sticker.sql"
 # initialization. This setting is disabled by default and MPD is run as the
 # current user.
 #
-#user				"nobody"
+user "matias"
 #
 # This setting specifies the group that MPD will run as. If not specified
 # primary group of user specified with "user" setting will be used (if set).
 # This is useful if MPD needs to be a member of group such as "audio" to
 # have permission to use sound card.
 #
-#group				"nogroup"
+group "users"
 #
 # This setting sets the address for the daemon to listen on. Careful attention
 # should be paid if this is assigned to anything other then the default, any.
@@ -93,7 +93,7 @@ port				"6600"
 # argument is recommended for troubleshooting, though can quickly stretch
 # available resources on limited hardware storage.
 #
-#log_level			"default"
+log_leveli "verbose"
 #
 # If you have a problem with your MP3s ending abruptly it is recommended that 
 # you set this argument to "no" to attempt to fix the problem. If this solves
@@ -126,7 +126,7 @@ auto_update	"yes"
 # Limit the depth of the directories being watched, 0 means only watch
 # the music directory itself.  There is no limit by default.
 #
-#auto_update_depth "3"
+auto_update_depth "3"
 #
 ###############################################################################
 
@@ -136,12 +136,12 @@ auto_update	"yes"
 # If this setting is set to "yes", MPD will discover audio files by following 
 # symbolic links outside of the configured music_directory.
 #
-#follow_outside_symlinks	"yes"
+follow_outside_symlinks	"yes"
 #
 # If this setting is set to "yes", MPD will discover audio files by following
 # symbolic links inside of the configured music_directory.
 #
-#follow_inside_symlinks		"yes"
+follow_inside_symlinks		"yes"
 #
 ###############################################################################
 
