--- a/config/termite/config
+++ b/config/termite/config
@@ -1,6 +1,8 @@
-[options]
+[optiont]
 scrollback_lines = 10001
-font             = Fira Mono for Powerline 11
+font             = Fira Mono Medium for Powerline 10
+font			 = Powerline Extra Symbols 9
+font			 = FontAwesome 10
 clickable_url    = true
 browser          = google-chrome
 allow_bold       = true
